# gnome-agent

./: .env.example  .gitignore  README.md  gnome-agent.service  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/api/: agents.py  chat.py  config.py  health.py  mcp.py  sessions.py
app/core/: agent_builder.py  checkpointer.py  llm_factory.py  middleware.py  permissions.py  session_manager.py  toon_utils.py
app/db/: database.py  models.py
app/mcp/: client.py  registry.py
app/mcp/builtins/: desktop.py  filesystem.py  system.py
docs/: gnome-agent-demo.webm  how-to-guide.md  setup.md
extension/: api.js  extension.js  install.sh  messages.js  metadata.json  panel.js  prefs.js  stylesheet.css
extension/schemas/: gschemas.compiled  org.gnome.shell.extensions.gnome-agent.gschema.xml
