[project]
name = "gnome-agent"
version = "0.1.0"
description = "Local-first AI agent runtime with MCP support, LangGraph execution, and GNOME extension client"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langchain>=0.4",
    "langgraph>=0.4",
    "langchain-mcp-adapters>=0.1",
    "langchain-ollama>=0.3",
    "langchain-openai>=0.3",
    "fastmcp>=2.0",
    "aiosqlite>=0.20.0",
    "sse-starlette>=2.0",
    "pydantic-settings>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
